# ha-mikrotik-extended

./: .gitignore  README.md  hacs.json  info.md  pyproject.toml  sonar-project.properties
.github/: generate_releasenotes.py
.github/workflows/: conflicts.yml  release.yml  sonarcloud.yml  stale.yml  tests.yml  validate.yml
custom_components/mikrotik_extended/: __init__.py  apiparser.py  binary_sensor.py  binary_sensor_types.py  button.py  button_types.py  config_flow.py  const.py  coordinator.py  device_tracker.py  device_tracker_types.py  diagnostics.py  entity.py  exceptions.py  helper.py  icons.json  manifest.json  mikrotikapi.py  mndp.py  quality_scale.yaml  sensor.py  sensor_types.py  strings.json  switch.py  switch_types.py  update.py  update_types.py
custom_components/mikrotik_router/: __init__.py  apiparser.py  binary_sensor.py  binary_sensor_types.py  button.py  button_types.py  config_flow.py  const.py  coordinator.py  device_tracker.py  device_tracker_types.py  diagnostics.py  entity.py  manifest.json  mikrotikapi.py  mndp.py  quality_scale.yaml  sensor.py  sensor_types.py  services.yaml  strings.json  (+4 more)
docs/: QUALITY_SCALE_CHECKLIST.md
tests/: test_apiparser.py  test_binary_sensor.py  test_button.py  test_config_flow.py  test_coordinator.py  test_coordinator_helpers.py  test_device_tracker.py  test_diagnostics.py  test_discovery_flow.py  test_entity.py  test_exceptions.py  test_helper.py  test_init.py  test_mikrotikapi.py  test_mndp.py  test_options_flow.py  test_sensor.py  test_skip_sensor.py  test_switch.py  test_types_imports.py  test_update.py
(+52 files in other folders)
